# internal-bot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  hello.py  pyproject.toml
.github/workflows/: build_and_deploy.yml  build_test_and_lint.yml  deploy.yml
client/: send_test_webhook.py
deploy/: hosts.yml
deploy/playbooks/: 01_setup.yml  02_nginx.yml  03_app.yml  04_cron.yml
deploy/playbooks/templates/app/: Makefile.app.j2  intbot.env.example
deploy/playbooks/templates/nginx/: nginx.conf.j2
deploy/templates/app/: Makefile.app.j2  docker-compose.app.yml.j2  intbot.env.example
deploy/templates/nginx/: Makefile.nginx.j2  docker-compose.nginx.yml.j2
docs/: architecture.md  deployment.md
intbot/: .env.example  conftest.py  gunicorn.conf.py  manage.py  mypy.ini
intbot/core/: admin.py  models.py  tasks.py  views.py
intbot/core/analysis/: orders.py  products.py  submissions.py
intbot/core/bot/: channel_router.py  config.py  main.py  scheduled_messages.py
intbot/core/endpoints/: basic.py  webhooks.py
intbot/core/integrations/: github.py  pretalx.py  pretix.py  zammad.py
intbot/core/management/commands/: download_pretalx_data.py  download_pretix_data.py  run_bot.py  send_scheduled_message.py
intbot/core/migrations/: 0001_initial_migration.py  0002_test.py  0003_added_extra_field_to_webhook.py  0004_add_inbox_item_model.py  0004_add_send_after.py  0005_add_pretalx_data_model.py  0006_add_pretix_data_model.py
intbot/intbot/: asgi.py  settings.py  urls.py  wsgi.py
intbot/templates/: days_until.html  submissions.html  table.html
intbot/tests/: test_admin.py  test_basic.py  test_bot.py  test_managment_commands.py  test_tasks.py  test_views.py  test_webhooks.py
intbot/tests/test_analysis/: test_orders.py  test_products.py  test_submissions.py
intbot/tests/test_bot/: test_channel_router.py  test_inbox.py  test_main.py
intbot/tests/test_integrations/: test_github.py  test_pretalx.py  test_pretix.py  test_zammad.py
(+4 files in other folders)
