[project]
name = "internal-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "discord-py>=2.4.0",
    "django>=5.1.4",
    "django-tasks>=0.6.1",
    "psycopg>=3.2.3",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "django-extensions>=3.2.3",
]
