[project]
name = "internal-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "discord-py>=2.4.0",
    "django>=5.1.4",
    "django-tasks>=0.6.1",
    "psycopg>=3.2.3",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "django-extensions>=3.2.3",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.2",
    "whitenoise>=6.8.2",
    "gunicorn>=23.0.0",
    "django-stubs>=5.1.1",
    "pdbpp>=0.10.3",
    "pytest-cov>=6.0.0",
    "pytest-socket>=0.7.0",
    "respx>=0.22.0",
    "pydantic>=2.10.6",
]

[tool.pytest.ini_options]
pythonpath = [
    "intbot"
]

# Disable attempts of using the internet in tests, but allow connection to the
# database
addopts = "--disable-socket --allow-unix-socket"

[tool.coverage.run]
branch = true
omit = [
    "*/migrations/*",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if 0:",
    "def __repr__",
    "def __str__",
]
